# crown

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-web.sh  xmake.lua
assets/: assets.conf  sprites.conf  sprites.template  tiles.conf  tiles.template
assets/sounds/: wav-to-ogg-mono.sh
assets/sounds/rpg-sound-pack/: source.txt
cmake/: clang-wajic.cmake
cmake/wajic/: LICENSE  README.md  viewer.html  wajic.h  wajic.js  wajic.mk  wajic_file.h  wajicup.html  wajicup.js
cmake/wajic/samples/: Audio.cpp  Basic.c  Cpp.cpp  EmbedFile.cpp  Input.c  LibC.c  LoadUrl.cpp  SharedInit.c  WebGL.c
docs/: game.js
libs/: tweakable.h
libs/emscripten/system/: system.bc
libs/libxm/src/: play.c  xm_internal.h
libs/miniaudio/: miniaudio.h
libs/nanovg/: nanovg.c  nanovg.h
libs/stb/: stb_vorbis.c
libs/wajic/: wajic_gl.h
libs/wajic/samples/: Coroutine.c
resources/: dualtrax.xm.h  resources.inc  sprites.conf  sprites.h  sprites.png.h  sprites.template  tiles.conf  tiles.h  tiles.png.h  tiles.template  update.sh  upheavtt.ttf.h
resources/sounds/: swing.ogg.h  update.sh
resources/sprites/: spright.conf  sprites.conf  tiles.conf  tiles.template  update.sh
resources/sprites/Kings and Pigs/: source.txt
src/: Actor.cpp  Actor.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  NanoVG.h  Object.cpp  Object.h  Pig.cpp  Pig.h  PigKing.cpp  PigKing.h  Player.cpp  Player.h  World.cpp  World.h  main.cpp  music.cpp  unordered_vector.h
src/framework/: Asset.h  ImageFile.cpp  ImageFile.h  Resource.h  ShaderProgram.cpp  ShaderProgram.h  SpriteAtlas.cpp  SpriteAtlas.h  SpriteBatch.cpp  SpriteBatch.h  Target.cpp  Target.h  Texture.cpp  Texture.h  audio.cpp  audio.h  draw_tearing_indicator.h  get_resource.cpp  get_resource.h
src/platform/: platform.h  platform_android.cpp  platform_glfw.cpp  platform_wajic.cpp
src/state/: State.cpp  State.h
src/view/: NanoVG.h  View.cpp  View.h
web/: game.html  game.js
